[package]
name = "dspdb"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
phf = { version = "0.11.3", default-features = false }
phf_codegen = "0.11.3"

[build-dependencies]
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
phf = { version = "0.11.3", default-features = false }
phf_codegen = "0.11.3"